--- a/qrtag-server/static/monitor.html
+++ b/qrtag-server/static/monitor.html
@@ -12,7 +12,7 @@
             integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
             crossorigin="anonymous"></script>
     <script>
-      const socket = new WebSocket("ws://192.168.10.94:4003");
+      const socket = new WebSocket("ws://localhost:4003");
 
       socket.onmessage = (event) => {
         console.log(event.data);
