Show the gameOn

--- a/qrtag-server/static/monitor.html
+++ b/qrtag-server/static/monitor.html
@@ -40,7 +40,9 @@
 <h1>Base Locations</h1>
 <p>${JSON.stringify(json["baseLocations"], undefined, 2).replaceAll("\n", "<br />").replaceAll("  ", "\t")}</p>
 <h1>Last Action</h1>
-<p>${JSON.stringify(json["request"], undefined, 2).replaceAll("\n", "<br />").replaceAll("  ", "\t")}</p>`);
+<p>${JSON.stringify(json["request"], undefined, 2).replaceAll("\n", "<br />").replaceAll("  ", "\t")}</p>
+<h1>Game on</h1>
+<p>${JSON.stringify(json["gameOn"], undefined, 2).replaceAll("\n", "<br />").replaceAll("  ", "\t")}</p>\``);
         }
       };
 
